<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

        <VideoView
            android:id="@+id/video_image"
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/goto_record_button"
            style="@style/AlienButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_record"
            android:textStyle="bold" />
        <Button
            android:id="@+id/goto_edit_button"
            style="@style/AlienButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_edit"
            android:textStyle="bold" />
        <Button
            android:id="@+id/goto_display_button"
            style="@style/AlienButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_display"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
        <TextView
            android:id="@+id/uploading_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"
            android:text="@string/prompt_wait"
            />

</LinearLayout>
