<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_videos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smartphoneappdev.wcd.alienalbum.DisplayVideos">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/display_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/display_videos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:columnWidth="98dp"
            android:numColumns="auto_fit"
            android:padding="0dp"
            android:verticalSpacing="12dp"
            android:horizontalSpacing="4dp"
            android:layout_weight="1"
            android:stretchMode="spacingWidthUniform" />

        <Button
            android:id="@+id/goto_record_button"
            style="@style/AlienButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_record"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goto_search_button"
            style="@style/AlienButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_search"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goto_display_all"
            style="@style/AlienButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_display"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
